  to better distinguish between PT_UNICODE and PT_STRING8 type names
  during reverse lookups. (Nick Czeczulin)

* Fix encoding problem in makepy (Massa, Harald Armin)

* Pythonwin: trim leading and trailing whitespace in calltip text (kxroberto)

* Pythonwin: fix reload of package modules and support for 'pyw' and 'pyx' 
  extensions (kxroberto)

Since build 213:
----------------

* pythoncom gets better support for 64bit integers, including in arrays.

* pythoncom may fail to import on Windows 2000 installs with a default IE
  (Roger)

* Fix Pythonwin when backspacing over an extended character (from markt
 (metolone), via bug 2618277)

* Fixed a regression which would cause an error if you compared a PyTime 
  object to any other type, including None

Since build 212:
----------------

* py3k work - see the notes in the main documentation index for details,
  but this entailed a huge overhaul of almost all the pywin32 sources.
  Many things have been modernized for the first time in over a decade,
  and may new tests have been added.  As a result, build 213 will not
  be recommended for production work and should be treated as beta quality.

  Huge thanks to:
  - Roger Upole: for starting the py3k work, and without whom the py3k work
    would literally not yet have started.
  - Jason R. Coombs: for help porting win32timezone to py3k and for helping
    with the new datetime object support.
  - Vernon Cole: for help with porting adodbapi to py3k.

* win32eventlog.OpenEventLog and OpenBackupEventLog now return a PyHANDLE
  object which auto-closes on destruction.

* pythoncom servers which implemented 'universal' vtable interfaces from a
  typelib could cause Data Execution Protection (DEP) to be triggered if
  enabled.  This has been resolved and such servers now work correctly with
  DEP enabled.
  
* Fixed memory leak in win32wnet.WNetEnumResource.

* Added win32wnet.WNetAddConnection3 allowing a HWND to be specified for
  authentication.

* isapi: